# drogon

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/: dependabot.yml
.github/workflows/: build-binaries.yml  ci.yml  codeql.yml
installer/linux/: README.md  install-aerosentinel.sh
installer/windows/: README.md  install-aerosentinel.cmd  install-aerosentinel.ps1
public/: index.html  styles.css
python/: README.md  app.py
resources/windows/: aerosentinel.rc
scripts/: smoke-test.sh
src/: desktop_win.cc  main.cc
